tests/snapshots/run_wpt_conformance__onnx_reshape__squeeze__float16_2D_tensor_by_eliminating_1st_dimension.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float16 2D tensor by eliminating 1st dimension",
    "onnx",
    "PASS",
)
